# GuessTheELO

./: .gitignore  pyproject.toml
parser/: check_npz.py  png_parser.py
scripts/: download_fics.py  download_lichess.py
scripts/analysis/: analysis.py  column_sum.py  count_games.py  plots.py
scripts/filtering/: cutoff_moves.py  remove_dates.py  remove_endings.py  remove_game_types.py  remove_january_2014.py  remove_rating.py
scripts/preparation/: aggregate.py  normalization.py  plot_normalization.py  split.py  split_original.py
