[project]
name = "guesstheelo"
version = "0.1.0"
description = "Project for Systems with Machine Learning curse that aims to build reliable chess ranking prediction system based on player's game"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.33.0",
    "tqdm>=4.67.3",
    "zstandard>=0.25.0",
    "chess>=1.11.2",
    "numpy>=2.4.4"
]
